[project]
name = "risk-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyside6>=6.9.2",
    "reportlab>=4.4.3",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.5",
]
